fix: fixed strategy panel currency pipe

--- a/src/components/common/smart-rebalancing/smart-rebalancing.component.html
+++ b/src/components/common/smart-rebalancing/smart-rebalancing.component.html
@@ -118,7 +118,7 @@
                       }
                     </div>
                     <span class="font-mono text-green-700">
-                      +{{ rec.recommendedAmount | currency : 'EUR' : 'symbol' : '1.0-0' }}
+                      +{{ rec.recommendedBuyAmount | currency : 'EUR' : 'symbol' : '1.0-0' }}
                     </span>
                   </div>
                 }
